# advanced-kubernetes-mlops-platform

./: .dockerignore  .gitignore  Dockerfile.mlflow  Makefile  README.md  compose.yaml  docker-compose.yml  pyproject.toml
airflow/: dag-bundle-config.ini
contracts/: churn_training_contract.yml
docs/: advanced-orchestration-assessment.md  ai-workload-telemetry.md  airflow-asset-partitioning.md  airflow-dag-bundles.md  airflow-deadline-alerts.md  airflow-multi-team-readiness.md  airflow-stateful-orchestration.md  architecture.md  cloud-migration.md  constrained-impersonation.md  control-plane-depth.md  control-plane-diagnostics.md  cost-observability.md  demo-narration.txt  design-system.md  disaster-recovery.md  dra-admin-access-diagnostics.md  dra-advanced-device-sharing.md  dra-resource-health-status.md  dynamic-resource-allocation.md  event-driven-assets.md  executable-mlflow-registry.md  gitops-promotion.md  governance-evidence.md  hpa-scale-to-zero.md  indexed-job-resilience.md  inference-gateway.md  inplace-pod-resize.md  judge-demo.md  kserve-canary-readiness.md  kuberay-kueue.md  kubernetes-airflow-robustness.md  kueue-cohort-fair-sharing.md  kueue-concurrent-admission.md  kueue-elastic-workloads.md  kueue-flavor-fungibility.md  kueue-pending-workload-visibility.md  memory-qos.md  mlflow-registry-recovery.md  model-cache.md  (+25 more)
gitops/: gitops-promotion.yaml
kserve/: canary-analysis.yaml  canary-inferenceservice.yaml  inferenceservice.yaml  local-model-cache.yaml  production-hardening.yaml
kubernetes/: accelerator-scheduling.yaml  admission-policies.yaml  (+45 more)
(+92 files in other folders)
