[project]
name = "kubernetes-mlops-platform"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
integrations = [
  "metaflow>=2.12",
  "apache-airflow>=2.9",
  "mlflow>=2.14",
  "kserve>=0.13",
  "great-expectations>=0.18",
  "prometheus-client>=0.20",
  "evidently>=0.4",
  "fastapi>=0.111"
]
airflow33 = ["apache-airflow==3.3.0"]
